welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:31: error: reassignment to val
methode=false;
       ^